# liblocalization

./: .buildinfo  .envrc  .gitignore  README.md  genindex.html  index.html  main.py  objects.inv  pyproject.toml  run_all_sim.py  run_rosbags.py  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: index.html  pathlib.html
_modules/liblocalization/: api.html  api_example.html  motion.html  sensor.html
_modules/liblocalization/controllers/: deterministic_motion.html  particles.html
_sources/: index.rst.txt
cpp/: README.md  bindings.cpp  distance_transform.cpp  pyproject.toml  setup.py
cpp/_liblocalization_cpp/: __init__.pyi
docs/: build.sh  docker-compose.yml
docs/source/: conf.py  index.rst
liblocalization/: __init__.py  _api.py  api.py  api_example.py  core.py  main.py  map.py  motion.py  priors.py  real_node.py  ros.py  rosbag_node.py  sensor.py  stats.py  stub.py
liblocalization/controllers/: deterministic_motion.py  particles.py  stats.py
maps/: test_map.yaml
models/: model1.pkl  model2.pkl  model3.pkl  model4.pkl  model5.pkl
scripts/: analyze.py  rosbag_odom.py  sensor_prob.py
