[project]
name = "liblocalization"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = ["liblocalization", "libracecar", "_liblocalization_cpp"]

[tool.pyright]
exclude = ["**/result*", ".cache"]
typeCheckingMode = "standard"

[tool.poetry.dependencies]
# libracecar = { git = "https://github.com/rss2025-4/libracecar.git" }
libracecar = { path = "/home/alan/6.4200/libracecar/", develop = true }
liblocalization-cpp = { git = "https://github.com/rss2025-4/liblocalization.git", subdirectory = "cpp" }
# liblocalization-cpp = { path = "./cpp" }

jax = "^0.5.3"
rosbags = "^0.10.9"
odom-transformer = { git = "https://github.com/Alan-Chen99/odom_transformer.git" }
deprecation = "^2.1.0"

[tool.poetry.group.gpu]
optional = true
[tool.poetry.group.gpu.dependencies]
jax = { version = "^0.5.3", extras = ["cuda12"] }

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = "^8"
sphinx-autodoc-typehints = "^3"
sphinx-rtd-theme = "^3.0.2"
rstfmt = "^0.0.14"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"
wheel = "^0.45.1"
pybind11 = "^2.13.6"
build = "^1.2.2.post1"
